# MON

./: .gitignore  .moncfg.mon  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  contributor-license-agreement.md  test_all.sh
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/api/: README.md
docs/cli/: bundle.md  check.md  fmt.md  lint.md
docs/dev/: COMPREHENSIVE_EXPORT.md  FORMATTER_FIXES.md  FORMAT_LIMITATIONS.md  formatter-enhancements.md
docs/examples/: cli-workflow.md  configs.md
docs/formatter/: configuration.md
docs/linter/: README.md  best-practices.md  complexity.md  configuration.md  imports.md  rules.md  smells.md
docs/lsp/: README.md
schemas/: README.md
schemas/examples/: formatter-config.mon  linter-config.mon
schemas/types/: formatter.mon  linter.mon
src/: errors.rs  main.rs
src/commands/: bundle.rs  check.rs  compile.rs  completions.rs  fmt.rs  init.rs  lint.rs  mod.rs
src/formatter/: advanced.rs  config.rs  format.rs  mod.rs  style.rs  watch.rs
src/linter/: api.rs  complexity.rs  diagnostic.rs  imports.rs  mod.rs  position.rs  rules.rs  smells.rs  symbol_table.rs  tests.rs
templates/: unified-default.mon  unified-lenient.mon  unified-strict.mon
tests/: integration_tests.rs
tests/tests/ok/: comprehensive.mon
