[package]
name = "mon"
version = "0.0.1"
edition = "2024"
authors = ["MON Project Contributors"]
description = "Command-line interface for Mycel Object Notation - a type-safe configuration language"
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://mycel-lang.org"
documentation = "https://mycel-lang.org"
keywords = ["configuration", "mon", "cli", "formatter", "linter"]
categories = ["command-line-utilities", "config", "development-tools"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.52", features = ["derive"] }
clap_complete = "4.5"
colored = "3.0.0"
miette = { version = "7.6.0", features = ["fancy"] }
mon-core = {version = "0.0.3", features = ["lsp"]}
serde = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
toml = "0.9.8"
notify = "6.1"
walkdir = "2.4"
dialoguer = "0.11"
console = "0.15"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
assert_fs = "1.1.2"
